--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="modal">
   <div> <a>Close Resume</a>
   <img src="https://i.imgur.com/d5htkvo.png">
- <!-- <embed src="pdfFiles/interfaces.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"> -->
+ <embed src="file:///C:/Users/Danish/Desktop/Matthew%20Delisle%20resume.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 </div>
 </div>
 
