--- a/index.html
+++ b/index.html
@@ -3,75 +3,67 @@
 
 <head>
   <meta charset="utf-8">
+  <title>PORTFOLIO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Matt Delisle Portfolio</title>
-  <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
-  <style>body{border: 1px solid red;}</style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <header>
-    
-    <nav class="nav-primary">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about" class="bio">About Me</a></li>
-        <li><a href="#resume" class="resume">Resume</a></li>
-        <li><a href="#projects" class="projects">Projects</a></li>
-      </ul>
-    </nav>
-    <hr class="no-css">
-    
-  
-  </header>
+  <!-- <nav class="nav-primary">
+    <ul>
+      <li><a href="#about" class="bio">About Me</a></li>
+      <li><a href="#resume" class="resume">Resume</a></li>
+      <li><a href="#projects" class="projects">Projects</a></li>
+    </ul>
+  </nav> -->
+  <main>
+    <div class="wrapper">
+      <header>
+        <h1>Matt Delisle</h1>
+        <a href="Matt_Delisle_Resume.pdf" target="_blank">Resume</a>
+      </header>
+      <p>aspiring and ongoing web developer</p>
+      <div class="media">
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/matthew-delisle-47336969/">
+              <svg role="img" height="2em" width="2em" color="blue" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <title>LinkedIn icon</title>
+                <path
+                  d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/MattyDanish">
+              <svg role="img" height="2em" width="2em" color="blue" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <title>GitHub icon</title>
+                <path
+                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+              </svg>
+            </a>
+          </li>
+        </ul>
 
-  <h1>Matt Delisle</h1>
-  <nav class="nav-social">
-    <a href='https://www.linkedin.com/in/matthew-delisle-47336969/' target="_blank">
-      LinkedIn</a>
-    <span class="no-css"> | </span>
-    <a href='https://github.com/MattyDanish' target="_blank">
-      GitHub
-    </a>
-  </nav>
+      </div>
+    </div>
 
-<div class="content-wrap">
-
-
-    <main>
-      <section id="about"> 
-        <h2>About Me</h2>
-        <p>
-          Growing up in a millenial world has led me to my excitement for technology. For some it may be just a
-          necessity, but for me, it has become my <span class="me-excited">passion</span>. As a college graduate with a B.A. in Music Industry, Minor in
-          Audio Production, I never thought my career path would take a turn to Web Development. I have found a way to
-          implement the skills I've learned and transfer them to a career that continues to grow along with me.
-        </p>
-
-        <div id="resume">
-          <span><b>Resume</b>: </span>
-          <a href="#">View</a>
-          <span>  | </span>
-          <a href="#">Download</a> (pdf)
-        </div>
-      </section>
-
-      <section id="projects">
-          <h2>My Projects</h2>
-         <nav class="nav-projects">
-            <ul>
-              <li><a href="https://mattydanish.github.io/RapApp/">Rap App</a></li>
-              <li><a href="https://mattydanish.github.io/API-AJAX/">Youtube Searcher</a></li>
-              <li><a href="https://mattydanish.github.io/shopList/">Shopping List</a></li>
-              <li><a href="https://mattydanish.github.io/trafficLights/">Traffic Lights</a></li>
-            </ul>
-         </nav>
-      </section>
-    </main>
-  </div>
-  <!-- <script src="main.js"></script> -->
-
+    <section id="projects">
+      <h2>My Projects</h2>
+      <nav class="nav-projects">
+        <ul>
+          <li><a href="https://mattydanish.github.io/RapApp/">Rap App</a></li>
+          <li><a href="https://mattydanish.github.io/API-AJAX/">Youtube Searcher</a></li>
+          <li><a href="https://mattydanish.github.io/shopList/">Shopping List</a></li>
+          <li><a href="https://mattydanish.github.io/trafficLights/">Traffic Lights</a></li>
+        </ul>
+      </nav>
+    </section>
+  </main>
 </body>
 
 </html>
